# Unpacking_Rsync

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  build.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  test.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: file_comdef.h  file_dev.h  file_restore.h  file_utils.h  kysec_file_comdef.h  kysec_file_proxy.h  kysec_file_restore.h  kysec_file_utils.h
lib/: Makefile  Makefile.am  Makefile.in  file_attrs_sync.c  file_data_sync.c  file_sync.c  file_utils.c  job_proxy.c  kysec_file_attr_sync.c  kysec_file_attrs_sync.c  kysec_file_data_sync.c  kysec_file_proxy.c  kysec_file_sync.c  kysec_file_utils.c  kysec_job_proxy.c
src/: Makefile  Makefile.am  Makefile.in  file_backup.c  file_backup.h  file_restore.c  internal.h  kysec_file_backup.c  kysec_file_restore.c  main.c
test/: Makefile  Makefile.am  Makefile.in  test.sh  test_for_attr.c  test_for_file.c  test_for_job.c  test_for_sync.c  test_for_utils.c
test/test_dir/: delta  orig  sig
